fetchdemo and navbar

--- a/templates/aboutpages/rohan.html
+++ b/templates/aboutpages/rohan.html
@@ -47,7 +47,7 @@
                     src="https://docs.google.com/document/d/1caGFdefkHrh74c3f_iuIx26mDD3QnP0FDM9cpS8BYFM/edit?usp=sharing"
             ></iframe>
         </p>
-        <label for="value1">Guess!</label>
+        <label for="value1">Guess my Lucky Number!</label>
         </br>
         <input  id="value1" type="number" />
         <input type="submit" onclick="LuckyNumber();">
