--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -75,11 +75,11 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> About Us
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="nav-link" href="{{ url_for('divya') }}">Divya</a>
-                        <a class="nav-link" href="{{ url_for('adi') }}">Adi</a>
-                        <a class="nav-link" href="{{ url_for('brian') }}">Brian</a>
-                        <a class="nav-link" href="{{ url_for('rohan') }}">Rohan</a>
-                        <a class="nav-link" href="{{ url_for('jason') }}">Jason</a>
+                        <a class="nav-link" href="{{ url_for('about.divya') }}">Divya</a>
+                        <a class="nav-link" href="{{ url_for('about.adi') }}">Adi</a>
+                        <a class="nav-link" href="{{ url_for('about.brian') }}">Brian</a>
+                        <a class="nav-link" href="{{ url_for('about.rohan') }}">Rohan</a>
+                        <a class="nav-link" href="{{ url_for('about.jason') }}">Jason</a>
                     </div>
                 </li>
             </div>
@@ -89,12 +89,12 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Travel
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="nav-link" href="{{ url_for('hotels') }}">Hotels</a>
-                <a class="nav-link" href="{{ url_for('flights') }}">Airports</a>
-                <a class="nav-link" href="{{ url_for('maps') }}">Maps</a>
-                <a class="nav-link" href="{{ url_for('weather') }}">Weather</a>
-                <a class="nav-link" href="{{ url_for('carrental') }}">Cars</a>
-                <a class="nav-link" href="{{ url_for('places') }}">Places</a>
+                <a class="nav-link" href="{{ url_for('travel.hotels') }}">Hotels</a>
+                <a class="nav-link" href="{{ url_for('travel.flights') }}">Airports</a>
+                <a class="nav-link" href="{{ url_for('travel.maps') }}">Maps</a>
+                <a class="nav-link" href="{{ url_for('travel.weather') }}">Weather</a>
+                <a class="nav-link" href="{{ url_for('travel.carrental') }}">Cars</a>
+                <a class="nav-link" href="{{ url_for('travel.places') }}">Places</a>
             </div>
         </li>
     </div>
