--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -66,23 +66,30 @@
     li:hover a::before{
         width: 100%;
     }
+    .darkmode{
+        background-color: black;
+    }
+    .lightmode {
+        background-color: #f8f9fa;
+    }
+
 </style>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav id="navbar" class="navbar navbar-expand-lg navbar-light {{darkmode}}">
     <a class="nav-link" href="{{ url_for('index') }}">Expeditions</a>
-            <!-- ABOUT US DROPDOWN -->
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> About Us
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="nav-link" href="{{ url_for('about.divya') }}">Divya</a>
-                        <a class="nav-link" href="{{ url_for('about.adi') }}">Adi</a>
-                        <a class="nav-link" href="{{ url_for('about.brian') }}">Brian</a>
-                        <a class="nav-link" href="{{ url_for('about.rohan') }}">Rohan</a>
-                        <a class="nav-link" href="{{ url_for('about.jason') }}">Jason</a>
-                    </div>
-                </li>
+    <!-- ABOUT US DROPDOWN -->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> About Us
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="nav-link" href="{{ url_for('about.divya') }}">Divya</a>
+                <a class="nav-link" href="{{ url_for('about.adi') }}">Adi</a>
+                <a class="nav-link" href="{{ url_for('about.brian') }}">Brian</a>
+                <a class="nav-link" href="{{ url_for('about.rohan') }}">Rohan</a>
+                <a class="nav-link" href="{{ url_for('about.jason') }}">Jason</a>
             </div>
+        </li>
+    </div>
     <!--  DROPDOWN -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <li class="nav-item dropdown">
@@ -94,7 +101,7 @@
                 <a class="nav-link" href="{{ url_for('travel.maps') }}">Maps</a>
                 <a class="nav-link" href="{{ url_for('travel.weather') }}">Weather</a>
                 <a class="nav-link" href="{{ url_for('travel.carrental') }}">Cars</a>
-                <a class="nav-link" href="{{ url_for('travel.places') }}">Places</a>
+                <a class="nav-link" href="{{ url_for('travel.places') }}">Countries</a>
             </div>
         </li>
     </div>
@@ -130,8 +137,28 @@
             </div>
         </li>
     </div>
-    <button onclick="darkMode()">Toggle Dark Mode</button>
+    <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 </nav>
+
+<script>
+    function toggleDarkMode(){
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function() {
+            if (this.readyState == 4 && this.status == 200) {
+                if (document.getElementById("navbar").classList.contains("darkmode")){
+                    document.getElementById("navbar").classList.remove("darkmode");
+                    document.getElementById("navbar").classList.add("lightmode");
+                }
+                else {
+                    document.getElementById("navbar").classList.remove("lightmode");
+                    document.getElementById("navbar").classList.add("darkmode");
+                }
+            }
+        };
+        xhttp.open('POST',"/darkmode",true);
+        xhttp.send();
+    }
+</script>
