commit before deploy hehe

--- a/templates/PetQuiz.html
+++ b/templates/PetQuiz.html
@@ -5,11 +5,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Quiz</title>
+    <script>
+    const quizContainer = document.getElementById('quiz');
+    const resultsContainer = document.getElementById('result');
+    const submitButton = document.getElementById('submit');
+    function buildQuiz(){}
+    funtion showResults(){}
+
+    </script>
 </head>
-{% endblock %}
+{% endblock %};
 
 {% block body %}
 <body>
+<div id="title"></div>
+    <ul>
+        <li class="alternative"></li>
+        <li class="alternative"></li>
+        <li class="alternative"></li>
+        <li class="alternative"></li>
+    </ul>
+
 
 </body>
 </html>
