--- a/templates/connor.html
+++ b/templates/connor.html
@@ -52,6 +52,10 @@
                 <td>
                     <p> Hi! My name is Connor Wang and I am a junior at Del Norte High School. I am enrolled in the CSP class. I play for the Del Norte football team, and love spending time with friends!
                      Week 4 Work: Blueprints and Pet Information Overview Page</p>
+                    <div>
+                        <a href="ghpages.tanayteamfood.tk">Go  Here!</a>
+                        <p> This link will lead you to more information regarding the team and the process to code!</p>
+                    </div>
                     <img id="place" class="img-responsive py-3" alt="" width="256" src="/static/assets/connormask.jpg" >
                     <div>
                         <button onclick="maskchange()" id="maskchange-btn">Switch to mask off</button>
