--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -44,7 +44,6 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{{ url_for('bpranav.dogs') }}">Dogs Adoption</a>
                     <a class="dropdown-item" href="{{ url_for('bpranav.birds') }}">Birds Adoption</a>
-                    <a class="dropdown-item" href="{{ url_for('btanay.hangman') }}">Hangman</a>
                     <a class="dropdown-item" href="{{ url_for('bchase.cats') }}">Cats Adoption</a>
                     <a class="dropdown-item" href="{{ url_for('bcolin.imageCarousel') }}">Meet Some Pets</a>
                     <a class="dropdown-item" href="{{ url_for('bpranav.petplanner') }}">Plan Out Adopting A Pet</a>
@@ -58,6 +57,15 @@
                     <a class="dropdown-item" href="{{ url_for('bchase.Enclosures') }}">Enclosures</a>
                 </div>
         </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Games and Fun!
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{{ url_for('bconnor.PetQuiz') }}">Pet Quiz</a>
+                    <a class="dropdown-item" href="{{ url_for('btanay.hangman') }}">Hangman</a>
+                </div>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Database Features
