--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -21,6 +21,8 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('pokemon_cards') }}>Pokemon Cards</a>
             <a class="nav-link" href={{ url_for('sports_cards') }}>Sports Cards</a>
             <a class="nav-link" href={{ url_for('funko_pop') }}>Funko Pops</a>
+            <a class="nav-link" href={{ url_for('crud_async') }}>Crud</a>
+            
 
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false" id="dropdownMenuButton1" type="button">About Us</a>
