added fortnite page + assets

--- a/templates/KianAboutMe.html
+++ b/templates/KianAboutMe.html
@@ -81,6 +81,7 @@
                     <b style="font-size: large">Click on book below for my pair share journal</b>
                 <p><a href="https://docs.google.com/document/d/1bz69bZUXveOjDREpvgvM_BcSK2rspoDvrIt0UUoQAxs/edit?usp=sharing">
                     <img src="/static/assets/journal.jpg" width="200">
+            </a>
 
             </div>
 
@@ -106,7 +107,9 @@
         {% endfor %}
     </table>
 </div>
-
+    <div>
+        <p>{{ shazam['hints']}}</p>
+    </div>
 
 </body>
 </html>
