--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -19,7 +19,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
             <a class="nav-link" href={{ url_for('index') }}>Portfolio</a>
             <a class="nav-link" href={{ url_for('pokemon_cards') }}>Pokemon Cards</a>
-            <a class="nav-link" href={{ url_for('sports_cards') }}>Sports Cards</a>
+            <a class="nav-link" href={{ url_for('sports_cards') }}>Fortnite</a>
             <a class="nav-link" href={{ url_for('funko_pop') }}>Funko Pops</a>
 
             <li class="nav-item dropdown">
