--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -8,7 +8,6 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 <html lang="en">
 
 
-
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -103,73 +102,73 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 {% include "layouts/navbar.html" %}
 
 {% block body %}
-<div class="container-fluid">
-    <div class="row justify-content-end" style="padding: 2%;">
-        <div class="col-2" style="text-align: right;">
-            {% block info %}
-                <!-- notice jinja style variables used in href's -->
-                <a><h5>{{name}}</h5></a>
-                <a href={{github}} target="_blank"><i class="fa fa-github"></i></a>
-                <a href={{youtube}} target="_blank"><i class="fa fa-youtube-play"></i></a>
-                <a href={{twitter}} target="_blank"><i class="fa fa-twitter"></i></a>
-            {% endblock %}
-        </div>
-    </div>
-
-    <div class="product" style="margin-top: 2%;">
-        <div class="row" style="padding: 10%; padding-top: 0%; padding-bottom: 5%;">
-
-            <div class="col-8" >
-                <h1>{{ project }} Project</h1>
+    <div class="container-fluid">
+        <div class="row justify-content-end" style="padding: 2%;">
+            <div class="col-2" style="text-align: right;">
+                {% block info %}
+                    <!-- notice jinja style variables used in href's -->
+                    <a><h5>{{name}}</h5></a>
+                    <a href={{github}} target="_blank"><i class="fa fa-github"></i></a>
+                    <a href={{youtube}} target="_blank"><i class="fa fa-youtube-play"></i></a>
+                    <a href={{twitter}} target="_blank"><i class="fa fa-twitter"></i></a>
+                {% endblock %}
             </div>
-
         </div>
 
-        <div class="row" style="padding-left: 10%;">
-            {% block links %}
-            <div class="col-3">
-                <a href="{{ overview }}" class="btn">Overview</a>
+        <div class="product" style="margin-top: 2%;">
+            <div class="row" style="padding: 10%; padding-top: 0%; padding-bottom: 5%;">
+
+                <div class="col-8" >
+                    <h1>{{ project }} Project</h1>
+                </div>
+
             </div>
 
-            <div class="col-3">
-                <a href="{{ repo }}" class="btn">Repository</a>
-            </div>
+            <div class="row" style="padding-left: 10%;">
+                {% block links %}
+                    <div class="col-3">
+                        <a href="{{ overview }}" class="btn">Overview</a>
+                    </div>
 
-                <!--<style>
-                    .button {
-                        text-decoration: none;
-                        color: white;
-                        background: linear-gradient(#000000 0%, #29C5F6 100%);
-                        border-radius: 10px;
-                        text-align: center;
-                        font-weight: 600;
+                    <div class="col-3">
+                        <a href="{{ repo }}" class="btn">Repository</a>
+                    </div>
 
-                    }
-                </style>
+                    <!--<style>
+                        .button {
+                            text-decoration: none;
+                            color: white;
+                            background: linear-gradient(#000000 0%, #29C5F6 100%);
+                            border-radius: 10px;
+                            text-align: center;
+                            font-weight: 600;
+
+                        }
+                    </style>
+
+                    <div class="col-2">
+                    <a href="/pokemoncards/" class="button">Pokemon Cards</a>
+                </div>
 
                 <div class="col-2">
-                <a href="/pokemoncards/" class="button">Pokemon Cards</a>
+                    <a href="/sportscards/" class="button">Sports Card</a>
+                </div>-->
+
+                {% endblock %}
             </div>
 
-            <div class="col-2">
-                <a href="/sportscards/" class="button">Sports Card</a>
-            </div>-->
-
-            {% endblock %}
         </div>
-
     </div>
-</div>
 {% endblock %}
 
 </body>
 
 {% block background %}
     <style>
-    body{
-        background-image: url("http://wonderfulengineering.com/wp-content/uploads/2014/09/blue-wallpaper-20.jpg");
-    }
-</style>
+        body{
+            background-image: url("https://tryhardguides.com/wp-content/uploads/2021/08/emoticons-featured.png");
+        }
+    </style>
 {% endblock %}
 
 </html>
