--- a/templates/newapi.html
+++ b/templates/newapi.html
@@ -40,11 +40,12 @@
                                 <td> {{info.wind_speed}} </td>
                             </tr>
                     </div>
+                </tr>
                 </tbody>
                         {% endfor %}
             </table>
         </div>
-
+    </body>
     </div>
     <style>
         table, td, th {
