--- a/templates/fortnite.html
+++ b/templates/fortnite.html
@@ -17,6 +17,8 @@ body {
 
 </style>
 
+
+
     <style>
 
     .hoverwrap {
@@ -63,12 +65,12 @@ body {
 </style>
 
 
+
 <table>
     <tr>
         <td><div class="hoverwrap">
             <img src="https://tryhardguides.com/wp-content/uploads/2021/08/black-knight-icon.png"/>
-            <div class="hovercap">Black Knight
-            Release Date</div> </div></td>
+            <div class="hovercap">Black Knight Release Date</div></div></td>
         <td><div class="hoverwrap">
             <img src="https://tryhardguides.com/wp-content/uploads/2021/08/blue-squire-icon.png"/>
             <div class="hovercap">Blue Squire</div> </div></td>
@@ -122,7 +124,7 @@ body {
             <div class="hovercap">Munitions Expert</div> </div></td>
         <td><div class="hoverwrap">
             <img src="https://tryhardguides.com/wp-content/uploads/2021/08/burnout-icon.png"/>
-            <div class="hovercap">Burnout</div> </div></td>
+            <div class="hovercap">Burnout ---------- K</div> </div></td>
         <td><div class="hoverwrap">
             <img src="https://tryhardguides.com/wp-content/uploads/2021/08/rex-icon.png"/>
             <div class="hovercap">Rex</div> </div></td>
