--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -28,7 +28,7 @@
                     <a class="dropdown-item" href="/crud">Crud</a>
                     <a class="dropdown-item" href="/search">Search</a>
                     <a class="dropdown-item" href="/ratingtest">Rating</a>
-                    <a class="dropdown-item" href="/numberguess">Number Guesser</a>
+                    <a class="dropdown-item" href="/games">Games</a>
                 </div>
             </li>
             <a class="nav-link" href="/mainabout">About Us</a>
