--- a/database/templates/database/database.html
+++ b/database/templates/database/database.html
@@ -3,11 +3,11 @@
 <!-- EXTEND (layout.html), this is a template for all rendered pages in the project -->
 {% extends "layouts/base.html" %}
 
-{% set project = "DATABASE" %}
+{% set project = "Reviews" %}
 
 <!-- CONTENT (in <head>), content for this page -->
 {% block head %}
-    <title>DATABASE page</title>
+    <title>Reviews page</title>
     <script src={{  url_for("database.static", filename="javascript/validation.js", version='101') }}></script>
 {% endblock %}
 
@@ -17,13 +17,13 @@
     <div class="container py-4 text-light bg-success">
         <header class="pb-3 mb-4 border-bottom">
             <div class="d-flex align-items-center text-light text-decoration-none">
-                <span class="fs-4">SQL DATABASE Admin Page</span>
+                <span class="fs-4">SQL Reviews Admin Page</span>
             </div>
         </header>
 
         <div class="container py-4">
             <div class="p-5 mb-4 bg-light text-dark rounded-3">
-                <h2>Table Viewer</h2>
+                <h2>View Reviews</h2>
                 <div class="row align-items-md-stretch">
                     <table class="table">
                         <tbody>
@@ -31,7 +31,7 @@
                             <td></td>
                             <td></td>
                             <td><a href={{url_for('database.database')}}>Full Table </a></td>
-                            <td><a href="https://github.com/RohanG326/supporting_cast/tree/main/crud">GitHub Source</a></td>
+                            <td><a href="https://github.com/RohanG326/supporting_cast/tree/main/database">GitHub Source</a></td>
                         </tr>
                         </tbody>
                     </table>
