--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -118,11 +118,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Crud Database
+                Databases
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="nav-link" href="{{ url_for('crud.crud') }}">Crud</a>
-                <a class="nav-link" href="{{ url_for('crud.search') }}">Search</a>
+                <a class="nav-link" href="{{ url_for('crud.search') }}">Crud Search</a>
+                <a class="nav-link" href="{{ url_for('database.database') }}">Reviews</a>
+                <a class="nav-link" href="{{ url_for('database.search') }}"> Reviews Search</a>
             </div>
         </li>
     </div>
