--- a/templates/PetQuiz.html
+++ b/templates/PetQuiz.html
@@ -5,28 +5,52 @@
 <head>
     <meta charset="UTF-8">
     <title>Quiz</title>
+    <style>
+
+    </style>
     <script>
-    const quizContainer = document.getElementById('quiz');
-    const resultsContainer = document.getElementById('result');
-    const submitButton = document.getElementById('submit');
-    function buildQuiz(){}
-    funtion showResults(){}
+        function check(){
+            var c=0;
+            var q1=document.quiz.question1.value;
+            var q2=document.quiz.question2.value;
+            var q3=document.quiz.question3.value;
+            if (q1=="Rhino") {c++}
+            if (q2=="Snake") {c++}
+            if (q3=="Dog") {c++}
+            alert(c);
+        }
 
     </script>
+
 </head>
 {% endblock %};
 
 {% block body %}
 <body>
-<div id="title"></div>
-    <ul>
-        <li class="alternative"></li>
-        <li class="alternative"></li>
-        <li class="alternative"></li>
-        <li class="alternative"></li>
-    </ul>
-
-
+<form name="quiz" id="quiz">
+    <div>
+        <p>1. Which of these is not a common pet?</p>
+        <p><input type = "radio" name="question1" value="Rhino">A. Rhino</p>
+        <p><input type = "radio" name="question1" value="Dog">B. Dog</p>
+        <p><input type = "radio" name="question1" value="Cat">C. Cat</p>
+        <p><input type = "radio" name="question1" value="Bird">D. Bird</p>
+    </div>
+    <div>
+        <p>2. Which pet is slick and menacing?</p>
+        <p><input type = "radio" name="question2" value="Dog">A. Dog</p>
+        <p><input type = "radio" name="question2" value="Snake">B. Snake</p>
+        <p><input type = "radio" name="question2" value="Fish">C. Fish</p>
+        <p><input type = "radio" name="question2" value="Mice">D. Mice</p>
+    </div>
+    <div>
+        <p>3. Which pet is known as man's best friend?</p>
+        <p><input type = "radio" name="question3" value="Lizard">A. Lizard</p>
+        <p><input type = "radio" name="question3" value="Frog">B. Frog</p>
+        <p><input type = "radio" name="question3" value="Cat">C. Cat</p>
+        <p><input type = "radio" name="question3" value="Dog">D. Dog</p>
+    </div>
+    <input type="button" name="" value="Submit" onclick="check()">
+</form>
 </body>
 </html>
 {% endblock %}
