--- a/templates/pbl/flights.html
+++ b/templates/pbl/flights.html
@@ -34,6 +34,7 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
         }
 
         /* Position text in the middle of the page/image */
@@ -61,6 +62,7 @@
         <h1 style="font-size:50px">Airline and Flight Information</h1>
 {#        <p>Small text</p>#}
     </div>
+
 
 {% endblock %}
 
