--- a/flight/templates/flight/flight.html
+++ b/flight/templates/flight/flight.html
@@ -35,38 +35,18 @@
             {#-webkit-filter: blur(8px);#}
 
             /* Full height */
-            height: 100%;
+            height: 5000px;
 
             /* Center and scale the image nicely */
             background-position: center;
-            background-repeat: no-repeat;
+            background-repeat: repeat;
             background-size: cover;
             background-attachment: fixed;
         }
 
-        /* Position text in the middle of the page/image */
-        .bg-text {
-            background-color: rgb(0,0,0); /* Fallback color */
-            background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-            color: white;
-            font-weight: bold;
-            border: 3px solid #f1f1f1;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 2;
-            width: 80%;
-            padding: 20px;
-            text-align: center;
-        }
+        /* Position text in the middle of the page/image
     </style>
 
-    <div class="bg-text">
-        {#        <h2>Big Text</h2>#}
-        <h1 style="font-size:50px">Airline and Flight Information</h1>
-        {#        <p>Small text</p>#}
-    </div>
     <div class="bg-image">
         <div class="container py-4">
             <div class="p-5 mb-4 bg-light text-dark rounded-3">
