sexy formatting of the json data

--- a/flight/templates/flight/flightsearch.html
+++ b/flight/templates/flight/flightsearch.html
@@ -10,6 +10,20 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
 {% endblock %}
 
 {% block body %}
+    <style>
+        table, td, th {
+            border: 10px solid black;
+            padding: 50px;
+        }
+        td, th {
+            text-align:center;
+            color: black;
+        }
+        table{
+            width: 100%;
+            margin: auto;
+        }
+    </style>
     <body style="background-color:powderblue; height: 2000px">
     <div class="container py-4 bg-primary">
         <!-- heading -->
