--- a/templates/pranav.html
+++ b/templates/pranav.html
@@ -3,6 +3,7 @@
 {% block head %}
 <html>
 <head>
+<link rel="stylesheet" href="test.css">
     <script>
         var maskon = true;
         function togglemask() {
