Database Async and reformatting

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -77,6 +77,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="nav-link" href="{{ url_for('crud.search') }}">SQL Search</a>
                     <a class="nav-link" href="{{ url_for('crud.crud') }}">SQL Crud </a>
+                    <a class="nav-link" href="{{ url_for('crud_api.crud_api') }}">SQL Async</a>
                 </div>
             </li>
 
