--- a/crud/templates/crud/crud.html
+++ b/crud/templates/crud/crud.html
@@ -4,55 +4,22 @@
 {% extends "layouts/base.html" %}
 
 <!-- CONTENT (in <head>), content for this page -->
-{% block body %}
+{% block head %}
     <title>CRUD page</title>
+    <script src={{  url_for("crud.static", filename="javascript/validation.js", version='101') }}></script>
+    <script src={{  url_for("crud.static", filename="javascript/reload_page.js", version='101') }}></script>
+{% endblock %}
 
-    <!-- Password verification and error message -->
-    <script>
-        //adding dom event listener to allow the verifyPassword funtion to be attached to the form. This is so we can keep our JS separate from our html and not have onsubmit in the form.
-
-        'use strict' //ensures best environment to prevent JS programmer error and tells browser to use most modern version of JS interpreter it has.
-
-        document.addEventListener("DOMContentLoaded", function(){
-            // event listener fires when the DOM is fully loaded. This way you can write scripts that are before the elements are loaded into the dom, but waits to be added to the page until the dom is fully loaded.
-
-            document.querySelector('#create').addEventListener('submit', verifyPassword );
-            //querySelector selects elements with CSS selectors. id="create" gets selected with the code above.
-
-            // pulled this function in here to keep it private from the window object/global scope. This is one way to protect your variables and functions from being hijacked by xss. Declared function names do act like variables in a way.
-
-            function verifyPassword(event) {
-                /*
-                because this is being called by an event, the event object is automatically
-                passed and captured as seen above. We are capturing it with the 'event' parameter in this function.
-                This is frequently represented in the following ways in JS: e, evt and event.
-                As a variable, it could be called anything - but it makes more sense to call it event rather than banana... etc.
-                Name your variables well, my friends.
-                */
-
-                const psw =  document.getElementById("password").value;
-
-                if (psw.length < 6 || psw.length > 20) {
-                    document.getElementById("pswError").innerHTML = "Password must be between 6 and 20 characters";
-                    event.preventDefault();
-                    //prevents submission of form when password length is not valid.
-                }
-
-            } //this function could be expanded upon, where we use JS to completely validate the form and have HTML5 as a fallback. Let me know if you want to have me expand this. - T
-
-            //additional listeners and functions could/should be put in here.
-
-        }); //end DOMContentLoaded listener
-
-    </script>
-    <div class="container py-4 text-light bg-success">
-        <header class="pb-3 mb-4 border-bottom">
-            <div class="d-flex align-items-center text-light text-decoration-none">
-                <span class="fs-4">SQL CRUD Data List</span>
-            </div>
+<!-- CONTENT (in <body>), content for this page -->
+{% block body %}
+    <div class="container py-4">
+        <header class="pb-3 mb-4 border-bottom border-primary text-dark">
+            <span class="fs-4">SQL CRUD Admin Page</span>
         </header>
+    </div>
+    <div class="container py-4 text-light bg-success">
 
-        <div class="container py-4">
+        <div class="container bg-secondary py-4">
             <div class="p-5 mb-4 bg-light text-dark rounded-3">
                 <h2>Table Viewer</h2>
                 <div class="row align-items-md-stretch">
@@ -105,7 +72,7 @@
         </div>
 
 
-        <div class="container py-4">
+        <div class="container bg-secondary py-4">
             <div class="p-5 mb-4 bg-light text-dark rounded-3">
                 <h2>Create a new record</h2>
                 <form method="POST" ID="create" action={{url_for('crud.create')}} >
@@ -134,7 +101,7 @@
 
         </div>
 
-        <div class="container py-4">
+        <div class="container bg-secondary py-4">
 
             <div class="row mb-4 bg-light text-dark rounded-3">
 
@@ -218,4 +185,23 @@
         </div>
 
     </div>
+
+    <!-- Back end SQL data definition code (SQLalchemy) -->
+    <div class="container py-4">
+        <h1 id="BE-MODEL">Back End Definition Code (Model) </h1>
+        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fnighthawkcoders%2Fnighthawk_csp%2Fblob%2Fmaster%2Fcrud%2Fmodel.py&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
+    </div>
+
+    <!-- Front End HTML, shows this file -->
+    <div class="container py-4">
+        <h1 id="FE-VIEW">Front End HTML Code (View) </h1>
+        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fnighthawkcoders%2Fnighthawk_csp%2Fblob%2Fmaster%2Fcrud%2Ftemplates%2Fcrud%2Fcrud.html&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
+    </div>
+
+    <!-- Back Route code -->
+    <div class="container py-4">
+        <h1 id="BE-CONTROL">Back End Form Request and API Code (Control)</h1>
+        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fnighthawkcoders%2Fnighthawk_csp%2Fblob%2Fmaster%2Fcrud%2Fapp_crud.py&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
+    </div>
+
 {% endblock %}
