--- a/templates/testquiz.html
+++ b/templates/testquiz.html
@@ -1,125 +1,195 @@
-<!DOCTYPE html>
-{% extends "layouts/base.html" %}
-
-{% block head %}
 <html>
-<head>
-    <title>Food Pets Quiz</title>
-    <style>
-        body {
-            background-color: midnightblue;
-            font-family: Helvetica;
-        }
-
-        #main {
-            width: 80%;
-            max-width: 950px;
-            border: 1px gray solid;
-            margin: auto;
-            padding: 10px;
-            background-color: white;
-            border-radius: 10px;
-        }
-
-        #header {
-            margin-top: 0;
-            border: 2px solid black;
-            padding: 5px;
-            height: 250px;
-            background: lightgreen;
-            background-image: url("football.jpg");
-            color: white;
-        }
-
-        label {
-            display: block;
-        }
-
-        input {
-            width: 30px;
-            margin-left: 20px;
-        }
-
-        h2 {
-            clear: both;
-            padding-top: 20px;
-        }
-
-        button {
-            width: 100px;
-            margin-top: 20px;
-        }
-
-    </style>
-    {% endblock %}
-
-    {% block body %}
-</head>
-<body>
-<div id="main">
-    <div id="header">
-        <h1>Pets Quiz</h1>
-    </div>
-    <form id="form1">
-
-        <h2>Which of these is a common pet? </h2>
-        <label for="var_string"><input type="radio" name="variable" value="0" id="var_string" />Rhino</label>
-        <label for="var_join"><input type="radio" name="variable" value="0" id="var_join" />Elephant</label>
-        <label for="var_info"><input type="radio" name="variable" value="25" id="var_info" />Dog</label>
-        <label for="var_condition"><input type="radio" name="variable" value="0" id="var_condition"/>tiger</label>
-
-        <h2>Which pet is described as slick and menacing?</h2>
-        <label for="sub_string"><input type="radio" name="sub" value="25" id="sub_string"/>Snake</label>
-        <label for="sub_join"><input type="radio" name="sub" value="0" id="sub_join"/>Mice</label>
-        <label for="sub_info"><input type="radio" name="sub" value="0" id="sub_info" />Bird</label>
-        <label for="sub_condition"><input type="radio" name="sub" value="0" id="sub_condition" />Cat</label>
-
-        <button type="submit" value="Submit">Submit</button>
-
-    </form>
-
-    <p>Your grade is: <span id="grade">__</span></p>
-    <p id="grade2"></p>
-    {% endblock %}
-
-    {% block meta %}
+{% extends "layouts/base.html" %}
+{% block head %}
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Quiz</title>
     <script>
-        document.getElementById("form1").onsubmit=function() {
-            variable = parseInt(document.querySelector('input[name = "variable"]:checked').value);
-            sub = parseInt(document.querySelector('input[name = "sub"]:checked').value);
-            con = parseInt(document.querySelector('input[name = "con"]:checked').value);
-            ifstate = parseInt(document.querySelector('input[name = "ifstate"]:checked').value);
+        function Quiz(questions) {
+            this.score = 0;
+            this.questions = questions;
+            this.questionIndex = 0;
+        }
 
+        Quiz.prototype.getQuestionIndex = function() {
+            return this.questions[this.questionIndex];
+        }
 
-            result = variable + sub + con + ifstate;
-
-            document.getElementById("grade").innerHTML = result;
-
-            grading = [
-                {score:0,feedback:"Fat Rat", image: "none.jpg"},
-                {score:25,feedback:"You need to spend more time. Try again", image: "poor.jpg"},
-                {score:50,feedback:"I think you could do better. Try again.", image: "avg.jpg"},
-                {score:75,feedback:"So close. Try again.", image: "above.jpg"},
-                {score:100,feedback:"Excellent! You're a pet lover!", image: "ncs_logo.png"}
-            ];
-
-            for(i=0; i<grading.length; i++) {
-                if(result == grading[i].score) {
-                    result2 = grading[i].feedback + "<br /><img src='" + grading[i].image + "' width='300'  />";
-                }
+        Quiz.prototype.guess = function(answer) {
+            if(this.getQuestionIndex().isCorrectAnswer(answer)) {
+                this.score++;
             }
 
+            this.questionIndex++;
+        }
 
-            document.getElementById("grade2").innerHTML = result2;
+        Quiz.prototype.isEnded = function() {
+            return this.questionIndex === this.questions.length;
+        }
 
-            return false; // required to not refresh the page; just leave this here
-        } //this ends the submit function
+
+        function Question(text, choices, answer) {
+            this.text = text;
+            this.choices = choices;
+            this.answer = answer;
+        }
+
+        Question.prototype.isCorrectAnswer = function(choice) {
+            return this.answer === choice;
+        }
+
+
+        function populate() {
+            if(quiz.isEnded()) {
+                showScores();
+            }
+            else {
+                // show question
+                var element = document.getElementById("question");
+                element.innerHTML = quiz.getQuestionIndex().text;
+
+                // show options
+                var choices = quiz.getQuestionIndex().choices;
+                for(var i = 0; i < choices.length; i++) {
+                    var element = document.getElementById("choice" + i);
+                    element.innerHTML = choices[i];
+                    guess("btn" + i, choices[i]);
+                }
+
+                showProgress();
+            }
+        };
+
+        function guess(id, guess) {
+            var button = document.getElementById(id);
+            button.onclick = function() {
+                quiz.guess(guess);
+                populate();
+            }
+        };
+
+
+        function showProgress() {
+            var currentQuestionNumber = quiz.questionIndex + 1;
+            var element = document.getElementById("progress");
+            element.innerHTML = "Question " + currentQuestionNumber + " of " + quiz.questions.length;
+        };
+
+        function showScores() {
+            var gameOverHTML = "<h1>Result</h1>";
+            gameOverHTML += "<h2 id='score'> Your scores: " + quiz.score + "</h2>";
+            var element = document.getElementById("quiz");
+            element.innerHTML = gameOverHTML;
+        };
+
+        // create questions here
+        var questions = [
+            new Question("Hyper Text Markup Language Stand For?", ["JavaScript", "XHTML","CSS", "HTML"], "HTML"),
+            new Question("Which language is used for styling web pages?", ["HTML", "JQuery", "CSS", "XML"], "CSS"),
+            new Question("Which is not a JavaScript Framework?", ["Python Script", "JQuery","Django", "NodeJS"], "Django"),
+            new Question("Which is used for Connect To Database?", ["PHP", "HTML", "JS", "All"], "PHP"),
+            new Question("Webdevtrick.com is about..", ["Web Design", "Graphic Design", "SEO & Development", "All"], "All")
+        ];
+
+        // create quiz
+        var quiz = new Quiz(questions);
+
+        // display quiz
+        populate();
 
     </script>
+    <style>
+        /** code by webdevtrick (https://webdevtrick.com) **/
+        body {
+            background-color: #413D3D;
+        }
 
+        .grid {
+            width: 600px;
+            height: 500px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 10px 50px 50px 50px;
+            border: 2px solid #cbcbcb;
 
+        }
+
+        .grid h1 {
+            font-family: "sans-serif";
+            background-color: #01BBFF;
+            font-size: 60px;
+            text-align: center;
+            color: #ffffff;
+            padding: 2px 0px;
+
+        }
+
+        #score {
+            color: #01BBFF;
+            text-align: center;
+            font-size: 30px;
+        }
+
+        .grid #question {
+            font-family: "monospace";
+            font-size: 30px;
+            color: #01BBFF;
+        }
+
+        .buttons {
+            margin-top: 30px;
+        }
+
+        #btn0, #btn1, #btn2, #btn3 {
+            background-color: #01BBFF;
+            width: 250px;
+            font-size: 20px;
+            color: #fff;
+            border: 1px solid #1D3C6A;
+            margin: 10px 40px 10px 0px;
+            padding: 10px 10px;
+        }
+
+        #btn0:hover, #btn1:hover, #btn2:hover, #btn3:hover {
+            cursor: pointer;
+            background-color: #01BBFF;
+        }
+
+        #btn0:focus, #btn1:focus, #btn2:focus, #btn3:focus {
+            outline: 0;
+        }
+
+        #progress {
+            color: #2b2b2b;
+            font-size: 18px;
+        }
+    </style>
+</head>
+{% endblock %}
+{% block body %}
+<body>
+<div class="grid">
+    <div id="quiz">
+        <h1>Quiz in JavaScript  Webdevtrick.com</h1>
+        <hr style="margin-bottom: 20px">
+
+        <p id="question"></p>
+
+        <div class="buttons">
+            <button id="btn0"><span id="choice0"></span></button>
+            <button id="btn1"><span id="choice1"></span></button>
+            <button id="btn2"><span id="choice2"></span></button>
+            <button id="btn3"><span id="choice3"></span></button>
+        </div>
+
+        <hr style="margin-top: 50px">
+        <footer>
+            <p id="progress">Question x of y</p>
+        </footer>
+    </div>
 </div>
 </body>
-</html>
 {% endblock %}
+</html>
+
 
