--- a/templates/pbl/flights.html
+++ b/templates/pbl/flights.html
@@ -2,7 +2,7 @@
 {% extends "layouts/base.html" %}
 
 <!- This variable sets name of browser tab  -->
-{% set project = "Flights is so Cool" %}
+{% set project = "Flights are so Cool" %}
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
