added to navbar

--- a/flight/templates/flight/flightsearch.html
+++ b/flight/templates/flight/flightsearch.html
@@ -74,7 +74,9 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
                                 <input type="text" class="form-control" id="term" placeholder="Search By Airlines, Times, or Airports">
                                 <label></label> <!-- used for spacer -->
                             </div>
-                            <button class="btn btn-primary bg-secondary" onclick="search_data();">Search</button>
+                                <div align="center">
+                                <button class="btn btn-primary bg-secondary" onclick="search_data();" >Search</button>
+                                </div>
                         </div>
                     </div>
                 </div>
