--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -97,7 +97,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="nav-link" href="{{ url_for('travel.hotels') }}">Hotels</a>
-                <a class="nav-link" href="{{ url_for('travel.flights') }}">Airports</a>
+                <a class="nav-link" href="{{ url_for('flight.search') }}">Flights</a>
                 <a class="nav-link" href="{{ url_for('travel.maps') }}">Maps</a>
                 <a class="nav-link" href="{{ url_for('travel.weather') }}">Weather</a>
                 <a class="nav-link" href="{{ url_for('travel.carrental') }}">Cars</a>
