--- a/templates/colin.html
+++ b/templates/colin.html
@@ -13,7 +13,7 @@
 <body>
 <h1 class="text-center">Colin Home Page</h1>
 <div class="container">
-    <div class="row justify_content_md_center" style="align:center">
+    <div class="row justify_content_md_center" style="text-align:center">
         <table class="table">
             <style>
                 html,body {
